examples/errors/parsing/pat-comma-no-next.cn
fun f : (Int * Int) -> Int [pure] = {
  (x, ) -> x
}

main : () [impure] = ()
